--- a/styles/main.css
+++ b/styles/main.css
@@ -88,8 +88,8 @@ body {
 .card__btn {
   text-decoration: none;
   padding: 0.5em 1.5em;
-  color: #f0f0f0;
-  background-color: black;
+  color: black;
+  background-color: rgba(0, 0, 0, 0.08);
   border-radius: 25px;
 }
 
