--- a/styles/main.css
+++ b/styles/main.css
@@ -95,4 +95,9 @@ body {
 
 .card__btn + .card__btn {
   margin-left: 0.5em;
+}
+
+.someClass {
+  background-color: black;
+  color: white;
 }/*# sourceMappingURL=main.css.map */
