--- a/styles/main.css
+++ b/styles/main.css
@@ -100,4 +100,8 @@ body {
 .someClass {
   background-color: black;
   color: white;
+}
+
+.class2 {
+  color: #f0f0f0;
 }/*# sourceMappingURL=main.css.map */
