--- a/styles/main.scss
+++ b/styles/main.scss
@@ -15,12 +15,17 @@ body {
 
 .card__container {
   background-color: aqua;
-  white-space: nowrap;
-  overflow-x: auto;
-  overflow-y: hidden;
-  display: grid;
-  grid-auto-flow: column;
-  //max-width: min-content;
+  padding: 1em;
+  width: 400px;
+  height: 500px;
+  overflow: hidden;
+  // white-space: nowrap;
+  // overflow-x: auto;
+  // overflow-y: hidden;
+  // display: grid;
+  // grid-auto-flow: column;
+  // max-width: min-content;
+  position: relative;
   max-width: 500px;
   scrollbar-width: none;
   counter-reset: count-cards;
@@ -33,18 +38,25 @@ body {
 
 .card {
   background-color: bisque;
+  //padding: 1em;
   width: 100%;
   height: 100%;
+  left: 0;
+  top: 0;
   display: flex;
   flex-direction: column;
   white-space: normal;
   //margin: 15px 20px;
-  position: relative;
+  position: absolute;
   counter-increment: count-cards;
   margin: 0;
+  transform: translateX(-100%);
+  transition: all 0.6s ease-out;
+  //opacity: 0;
 
-  img {
-    //width: 100%;
+  &.active {
+    transform: translateX(0);
+    //opacity: 1;
   }
 
   figcaption {
@@ -69,7 +81,9 @@ body {
 }
 .card img {
   //height: 500px;
-  width: 500px;
+  //width: 500px;
+  width: 100%;
+  height: 100%;
   border: 1px solid gray;
 }
 
@@ -89,7 +103,7 @@ body {
   }
 
   .card {
-    scroll-snap-align: start;
+    //scroll-snap-align: start;
   }
 }
 
