--- a/styles/main.css
+++ b/styles/main.css
@@ -1,23 +1,35 @@
 :root {
-  box-sizing: border-box;
+  -webkit-box-sizing: border-box;
+          box-sizing: border-box;
 }
 
 *,
 ::before,
 ::after {
-  box-sizing: inherit;
+  -webkit-box-sizing: inherit;
+          box-sizing: inherit;
 }
 
 body {
   background-color: white;
+  font-family: "Franklin Gothic Medium", "Arial Narrow", Arial, sans-serif;
 }
 
 .container {
   height: 100vh;
+  display: -webkit-box;
+  display: -ms-flexbox;
   display: flex;
-  flex-direction: column;
-  justify-content: center;
-  align-items: center;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
   background-color: white;
 }
 
@@ -42,14 +54,21 @@ body {
   height: 100%;
   left: 0;
   top: 0;
+  display: -webkit-box;
+  display: -ms-flexbox;
   display: flex;
-  flex-direction: column;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
   white-space: normal;
   position: absolute;
   counter-increment: count-cards;
   margin: 0;
-  transform: translateX(-100%);
+  -webkit-transform: translateX(-100%);
+          transform: translateX(-100%);
 }
+
 .card.active {
   -webkit-animation: slide-card 0.8s ease-out;
           animation: slide-card 0.8s ease-out;
@@ -60,10 +79,16 @@ body {
 .card::before {
   content: counter(count-cards);
   position: absolute;
+  display: -webkit-box;
+  display: -ms-flexbox;
   display: flex;
   display: none;
-  align-items: center;
-  justify-content: center;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
   font-size: 1rem;
   line-height: 1rem;
   top: -15px;
@@ -89,24 +114,47 @@ body {
   top: 0;
   background-color: white;
   color: black;
+  display: -webkit-box;
+  display: -ms-flexbox;
   display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
   font-size: 3rem;
   text-align: center;
   padding: 0.5em;
-  opacity: 0.7;
+  background-color: rgba(255, 255, 255, 0.7);
+}
+
+.card__caption p {
+  -webkit-transform: translateY(200px);
+          transform: translateY(200px);
+  opacity: 0;
+  text-transform: uppercase;
 }
 
 .card.active .card__caption {
-  -webkit-animation: show-text 2.4s ease-out;
-          animation: show-text 2.4s ease-out;
+  -webkit-animation: background-lighten 2.4s ease-out;
+          animation: background-lighten 2.4s ease-out;
   -webkit-animation-fill-mode: forwards;
           animation-fill-mode: forwards;
 }
 
-@supports (scroll-snap-type: x mandatory) {
+.card.active .card__caption > p {
+  -webkit-animation: show-text 2.4s ease-out 0.25s;
+          animation: show-text 2.4s ease-out 0.25s;
+  -webkit-animation-fill-mode: forwards;
+          animation-fill-mode: forwards;
+}
+
+@supports ((-ms-scroll-snap-type: x mandatory) or (scroll-snap-type: x mandatory)) {
   .card__container {
     -ms-scroll-snap-type: x mandatory;
         scroll-snap-type: x mandatory;
@@ -114,15 +162,20 @@ body {
     scroll-snap-stop: always;
   }
 }
+
 .card__btn__container {
   margin-top: 2em;
 }
 
 .card__btn {
   text-decoration: none;
+  font-size: 1rem;
+  text-transform: capitalize;
+  display: block;
+  margin-top: 3em;
   padding: 0.5em 1.5em;
-  color: black;
-  background-color: rgba(0, 0, 0, 0.08);
+  color: silver;
+  background-color: black;
   border-radius: 25px;
 }
 
@@ -141,40 +194,83 @@ body {
 
 @-webkit-keyframes slide-card {
   0% {
-    transform: translateX(-100);
+    -webkit-transform: translateX(-100);
+            transform: translateX(-100);
   }
   100% {
-    transform: translateX(0);
+    -webkit-transform: translateX(0);
+            transform: translateX(0);
   }
 }
 
 @keyframes slide-card {
   0% {
-    transform: translateX(-100);
+    -webkit-transform: translateX(-100);
+            transform: translateX(-100);
   }
   100% {
-    transform: translateX(0);
+    -webkit-transform: translateX(0);
+            transform: translateX(0);
   }
 }
+
+@-webkit-keyframes background-lighten {
+  0% {
+    background-color: rgba(255, 255, 255, 0);
+  }
+  70% {
+    background-color: rgba(255, 255, 255, 0);
+  }
+  100% {
+    background-color: rgba(255, 255, 255, 0.7);
+  }
+}
+
+@keyframes background-lighten {
+  0% {
+    background-color: rgba(255, 255, 255, 0);
+  }
+  70% {
+    background-color: rgba(255, 255, 255, 0);
+  }
+  100% {
+    background-color: rgba(255, 255, 255, 0.7);
+  }
+}
+
 @-webkit-keyframes show-text {
   0% {
     opacity: 0;
+    -webkit-transform: translateY(200px);
+            transform: translateY(200px);
   }
   70% {
     opacity: 0;
+    -webkit-transform: translateY(200px);
+            transform: translateY(200px);
   }
   100% {
-    opacity: 0.7;
+    opacity: 1;
+    -webkit-transform: translateY(0px);
+            transform: translateY(0px);
   }
 }
+
 @keyframes show-text {
   0% {
     opacity: 0;
+    -webkit-transform: translateY(200px);
+            transform: translateY(200px);
   }
   70% {
     opacity: 0;
+    -webkit-transform: translateY(200px);
+            transform: translateY(200px);
   }
   100% {
-    opacity: 0.7;
+    opacity: 1;
+    -webkit-transform: translateY(0px);
+            transform: translateY(0px);
   }
-}/*# sourceMappingURL=main.css.map */
+}
+/*# sourceMappingURL=main.css.map */
